--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
     </div>
     <div class="description">
-        <span>Happy Valentine's JA🌟!</span>
+        <h2>Happy Valentine's JA🌟!</h2>
     </div>
     <div class="button">
         <button>
